# backend/internal/transport/http/v1/handlers/printer.go
@@ -2,22 +2,30 @@ package handlers
 
 import (
 	"emias_printer/pkg/logger"
-	"encoding/json"
-	"net/http"
 	"emias_printer/pkg/printer"
+	"encoding/json"
+	"fmt"
+	"net/http"
 
 	"go.uber.org/zap"
 )
 
-
-
-type PrintRequest struct{
+type CheckPrinterRequest struct {
 	Ip string `json:"ip"`
-    Text string `json:"text"`
 }
 
-type PrintResponse struct{
-    Result string `json:"result"`
+type CheckPrinterResponse struct {
+	Ip        string `json:"ip"`
+	Available bool   `json:"available"`
+}
+
+type PrintRequest struct {
+	Ip   string `json:"ip"`
+	Text string `json:"text"`
+}
+
+type PrintResponse struct {
+	Result string `json:"result"`
 }
 
 type PrinterHandlers struct {
@@ -25,7 +33,7 @@ type PrinterHandlers struct {
 }
 
 func InitPrinterHandlers(pm *printer.PrinterManipulator) *PrinterHandlers {
-    return &PrinterHandlers{pm: pm}
+	return &PrinterHandlers{pm: pm}
 }
 
 // FindPrinter находит ip принтера
@@ -36,18 +44,22 @@ func InitPrinterHandlers(pm *printer.PrinterManipulator) *PrinterHandlers {
 // @Router /api/v1/printer/find [get]
 func (h *PrinterHandlers) FindPrinter(w http.ResponseWriter, r *http.Request) {
 	ips, err := h.pm.Scan()
-	if err != nil {
-        http.Error(w, err.Error(), http.StatusInternalServerError)
+	if err == printer.NoPrinterFound {
+		http.Error(w, err.Error(), http.StatusNotFound)
 		return
-    }
+	}
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
 	data := map[string][]string{"ip": ips}
 	if err := json.NewEncoder(w).Encode(data); err != nil {
 		logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot encode data", zap.Error(err))
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-    w.Header().Set("Content-Type", "application/json")
-    w.WriteHeader(http.StatusOK)
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
 }
 
 // Print отправляет текст на принтер
@@ -62,23 +74,54 @@ func (h *PrinterHandlers) FindPrinter(w http.ResponseWriter, r *http.Request) {
 func (h *PrinterHandlers) Print(w http.ResponseWriter, r *http.Request) {
 	var d PrintRequest
 	if err := json.NewDecoder(r.Body).Decode(&d); err != nil {
-        logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot decode data", zap.Error(err))
-        http.Error(w, err.Error(), http.StatusBadRequest)
+		logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot decode data", zap.Error(err))
+		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
-    }
+	}
+	fmt.Println(d)
 
-    if err := h.pm.SendRequest(d.Text, d.Ip, 9100); err != nil {
-        logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot send request", zap.Error(err))
-        http.Error(w, err.Error(), http.StatusInternalServerError)
+	if err := h.pm.SendRequest(d.Text, d.Ip, 9100); err != nil {
+		logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot send request", zap.Error(err))
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
-    }
+	}
 
 	data := PrintResponse{"ok"}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
 	if err := json.NewEncoder(w).Encode(data); err != nil {
 		logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot encode data", zap.Error(err))
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-    w.Header().Set("Content-Type", "application/json")
-    w.WriteHeader(http.StatusOK)
+}
+
+// Check Printer проверяет доступен ли принтер
+// @Summary проверяет доступен ли принтер
+// @Tags Printer
+// @Accept json
+// @Produce json
+// @Param request body CheckPrinterRequest true "Request body"
+// @Success 200 {object} CheckPrinterResponse
+// @Router /api/v1/printer/check [post]
+func (h *PrinterHandlers) Check(w http.ResponseWriter, r *http.Request) {
+	var d CheckPrinterRequest
+	if err := json.NewDecoder(r.Body).Decode(&d); err != nil {
+		logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot decode data", zap.Error(err))
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	av := h.pm.CheckPrinterIp(d.Ip)
+	data := CheckPrinterResponse{
+		Ip:        d.Ip,
+		Available: av,
+	}
+	if err := json.NewEncoder(w).Encode(data); err != nil {
+		logger.GetLoggerFromContext(r.Context()).Warn(r.Context(), "cannot encode data", zap.Error(err))
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
 }
