# backend/internal/transport/http/v1/server.go
@@ -2,13 +2,14 @@ package v1
 
 import (
 	"context"
+	_ "emias_printer/docs"
 	"emias_printer/internal/transport/http/v1/handlers"
 	"emias_printer/pkg/logger"
+	"emias_printer/pkg/middleware"
+	"emias_printer/pkg/printer"
 	"fmt"
 	"net/http"
-	_"emias_printer/docs"
 	"time"
-	"emias_printer/pkg/printer"
 
 	httpSwagger "github.com/swaggo/http-swagger"
 )
@@ -41,19 +42,22 @@ func (s *Server) RegisterHandlers(ctx context.Context, pm *printer.PrinterManipu
 		pingHandlers.Ping(w, r)
 	})
 	mux.HandleFunc("GET /api/v1/printer/find", func(w http.ResponseWriter, r *http.Request) {
-        printerHandlers.FindPrinter(w, r)
-    })
+		printerHandlers.FindPrinter(w, r)
+	})
 	mux.HandleFunc("POST /api/v1/printer/print", func(w http.ResponseWriter, r *http.Request) {
-        printerHandlers.Print(w, r)
-    })
+		printerHandlers.Print(w, r)
+	})
 
+	mux.HandleFunc("POST /api/v1/printer/check", func(w http.ResponseWriter, r *http.Request) {
+		printerHandlers.Check(w, r)
+	})
 
 	mux.Handle("/swagger/", httpSwagger.WrapHandler)
 	wrapper := logger.LoggerMidleware()(ctx, mux)
+	wrapper = middleware.CORSMiddleware(wrapper, middleware.DefaultCORS())
 	s.srv.Handler = wrapper
 	return nil
 }
-
 
 func (s *Server) Start() error {
 	return s.srv.ListenAndServe()
@@ -62,4 +66,3 @@ func (s *Server) Start() error {
 func (s *Server) Stop(ctx context.Context) error {
 	return s.srv.Shutdown(ctx)
 }
-
